--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^4.13.0",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.4",
     "@types/react-dom": "18.2.3",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "docx-templates": "^4.11.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "file-saver": "^2.0.5",
     "next": "13.3.4",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.5",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "prisma": "^4.13.0",
+    "ts-node": "^10.9.1"
   }
 }
